package/libopenssl: bump version to 3.0.9
Rebase patches onto new version

Remove 0005-crypto-perlasm-ppc-xlate.pl-add-linux64v2-flavour.patch,
0006-Add-support-for-io_pgetevents_time64-syscall.patch, and
0007-Fixup-support-for-io_pgetevents_time64-syscall.patch as these are
already applied upstream

Updated license after switch to Apache license:
https://www.openssl.org/blog/blog/2021/06/17/OpenSSL3.0ReleaseCandidate/

[Bernd: fixed license file/hash]

Signed-off-by: Danny Wood <danny@rotronics.co.uk>
Signed-off-by: Bernd Kuhls <bernd@kuhls.net>
[Peter: update .checkpackageignore]
Signed-off-by: Peter Korsgaard <peter@korsgaard.com>

--- a/.checkpackageignore
+++ b/.checkpackageignore
@@ -92,7 +92,125 @@ package/libfcgi/0002-disable-examples.patch Sob
 package/libftdi/0001-pkgconfig_libusb.patch Sob
 package/libftdi/0002-libftdi.pc-requires-libusb-fix-static-build.patch Sob
 package/libiio/S99iiod Shellcheck Variables
-package/libmad/0001-mips-h-constraint-removal.patch Sob
+package/libiqrf/0001-cmake-handle-static-library-and-find-required-thread.patch Upstream
+package/libiqrf/0002-use-only-c-language.patch Upstream
+package/libjson/0001-fix-broken-makefile.patch Upstream
+package/libjxl/0001-djxl-fix-segmentation-fault-when-JPEG-is-disabled.patch Upstream
+package/libkcapi/0001-lib-kcapi-kernel-if.c-fix-uclibc-build.patch Upstream
+package/libkcapi/0002-Add-disable-werror.patch Upstream
+package/libkcapi/0003-Fix-symver-build-error-on-non-ELF-platforms.patch Upstream
+package/libks/0001-CMakeLists.txt-honour-BUILD_TESTING.patch Upstream
+package/liblinear/0001-build-static-lib.patch Upstream
+package/liblockfile/0001-Makefile.in-fix-cross-compilation.patch Upstream
+package/liblog4c-localtime/0001-log4c.m4-fix-underquoted-definition-of-AM_PATH_LOG4C.patch Upstream
+package/liblog4c-localtime/0002-Fix-linking-error-without-pthread.patch Upstream
+package/liblog4c-localtime/0003-Fix-debug-mode-build-with-uClibc.patch Upstream
+package/liblog4c-localtime/0004-Add-AC_CONFIG_MACRO_DIR-to-configure.in.patch Upstream
+package/liblog4c-localtime/0005-Fix-C-support.patch Upstream
+package/libloki/0001-allow-to-install-to-a-specific-location-using-DESTDI.patch Upstream
+package/libloki/0002-use-ln-snf.patch Upstream
+package/libmad/0001-mips-h-constraint-removal.patch Sob Upstream
+package/libmad/0002-configure-ac-automake-foreign.patch Upstream
+package/libmanette/0001-Meson-Un-hardcode-building-a-shared-library.patch Upstream
+package/libmemcached/0001-disable-tests.patch Upstream
+package/libmemcached/0002-disable-sanitizer.patch Upstream
+package/libmemcached/0003-move-ac_config_aux_dir.patch Upstream
+package/libmemcached/0004-disable-doc-and-man.patch Upstream
+package/libmemcached/0005-fix-pointer-comparaison.patch Upstream
+package/libmng/0001-jpeg-9a.patch Upstream
+package/libmodsecurity/0001-configure.ac-drop-usage-of-git-at-configure-time.patch Upstream
+package/libmodsecurity/0002-modsecurity.pc.in-add-lstdc.patch Upstream
+package/libmpd/0001-Fix-build-on-archlinux-missing-include.patch Upstream
+package/libmpeg2/0001-altivec.patch Upstream
+package/libmpeg2/0002-armv4l.patch Upstream
+package/libmpeg2/0003-fix-arm-detection.patch Upstream
+package/libmpeg2/0004-fix-sparc.patch Upstream
+package/libnet/0001-Use-standard-int64_t-instead-of-__int64_t-for-mingw-cross-build.patch Upstream
+package/libnetfilter_conntrack/0001-conntrack-fix-build-with-kernel-5-15-and-musl.patch Upstream
+package/libnfc/0001-autotools-make-example-build-optional.patch Upstream
+package/libnfs/0001-Fix-include-sys-time.h.patch Upstream
+package/libnids/0001-libpcap-use-pkg-config.patch Upstream
+package/libnl/0001-Add-musl-workaround-to-the-libc-compat.h-copy.patch Upstream
+package/libnss/0001-Bug-1801182-Allow-overriding-OS_ARCH-OS_TEST-and-OS_.patch Upstream
+package/liboauth/0001-Fixes-build-issue-with-OpenSSL-1.1.0.patch Upstream
+package/libodb-mysql/0001-fix-syntax-issue-while-checking-ldflags.patch Upstream
+package/libodb-mysql/0002-mariadb-FTBFS-fix.patch Upstream
+package/libopenssl/0001-Dont-waste-time-building-manpages-if-we-re-not-going.patch Upstream
+package/libopenssl/0002-Reproducible-build-do-not-leak-compiler-path.patch Upstream
+package/libopenssl/0004-Configure-use-ELFv2-ABI-on-some-ppc64-big-endian-sys.patch Upstream
+package/liboping/0001-fix-utf8-support.patch Upstream
+package/liboping/0002-Open-raw-sockets-when-adding-hosts-not-when-doing-th.patch Upstream
+package/liboping/0003-Fix-compile-break-with-GCC-7-buffer-overflow-with-snprintf.patch Upstream
+package/liboping/0004-Fix-compile-error-on-GCC-7.patch Upstream
+package/liboping/0005-src-oping.c-always-use-s-style-format-for-printf-sty.patch Upstream
+package/libp11/0001-src-p11_attr.c-fix-build-with-gcc-4.8.patch Upstream
+package/libpam-tacplus/0001-Add-an-option-to-disable-Werror.patch Upstream
+package/libpjsip/0001-Merge-pull-request-from-GHSA-9pfh-r8x4-w26w.patch Upstream
+package/libpjsip/0002-Merge-pull-request-from-GHSA-cxwq-5g9x-x7fr.patch Upstream
+package/libplatform/0001-cmake-require-c-11-as-the-minimum-standard.patch Upstream
+package/libpng/0001-Disable-pngfix-and-png-fix-itxt.patch Upstream
+package/libpthsem/0001-fix-build-on-linux-3.x-host.patch Upstream
+package/libqb/0001-Add-disable-tests-option.patch Upstream
+package/libressl/0001-always-expose-SSL_OP_NO_TLSv1_3.patch Upstream
+package/libroxml/0001-src-roxml_mem.h-add-missing-extern.patch Upstream
+package/librsvg/0001-gdk-pixbuf-loader-Makefile.am-set-GDK_PIXBUF_MODULED.patch Upstream
+package/librtas/0001-configure.ac-remove-LOCAL_CHECK_FLAGS.patch Upstream
+package/librtlsdr/0001-Makefile.am-respect-DESTDIR-with-install-udev-rules.patch Upstream
+package/libselinux/0001-fix-musl-build.patch Upstream
+package/libselinux/0002-Do-not-use-PYCEXT-and-rely-on-the-installed-file-nam.patch Upstream
+package/libsepol/0001-support-static-only.patch Upstream
+package/libserial/0001-SerialPort.cpp-fix-build-when-size_t-is-an-unsigned-.patch Upstream
+package/libserial/0002-SerialPort.cpp-don-t-use-high-baudrates-when-not-ava.patch Upstream
+package/libserialport/0001-uclinux-detection.patch Upstream
+package/libshdata/0001-backend-Add-missing-include-files.patch Upstream
+package/libshdata/0002-examples-stress_test-Fix-build-with-musl-libc.patch Upstream
+package/libsidplay2/0001-sidplay2-libs-2.1.1.patch Upstream
+package/libsidplay2/0002-pkg-config.patch Upstream
+package/libsidplay2/0003-gcc6.patch Upstream
+package/libsigrok/0001-Support-glibmm-2.68.patch Upstream
+package/libsigrokdecode/0001-configure-ac-Add-support-for-Python-3-9.patch Upstream
+package/libsigrokdecode/0002-configure-Add-python-3-10-support.patch Upstream
+package/libsigrokdecode/0003-configure-ac-Use-python3-embed-pc-as-a-fallback.patch Upstream
+package/libsolv/0001-Fix-build-without-C.patch Upstream
+package/libsoup/0001-meson.build-set-c_std-to-gnu99.patch Upstream
+package/libsoxr/0001-Add-Libs.private-for-static-linking.patch Upstream
+package/libspatialindex/0001-allow-building-static-libs.patch Upstream
+package/libspatialindex/0002-CMakeLists.txt-fix-CMAKE_BUILD_TYPE.patch Upstream
+package/libsquish/0001-Makefile-add-f-option-for-ln-to-remove-existing-dest.patch Upstream
+package/libsrtp/0001-Remove-compatibility-code-for-legacy-OpenSSL-to-fix-LibreSSL-build.patch Upstream
+package/libsvg/0001-fix-expat-static-declaration.patch Upstream
+package/libsvg/0002-Fix-undefined-symbol-png_set_gray_1_2_4_to_8.patch Upstream
+package/libsvgtiny/0001-disable-debug-printfs.patch Upstream
+package/libsvgtiny/0002-Remove-Werror.patch Upstream
+package/libsvgtiny/0003-Hopefully-silence-warnings-about-inlines-and-non-inlines-calling-one.patch Upstream
+package/libsvgtiny/0004-Build-Include-gperf-generated-code-directly.patch Upstream
+package/libtalloc/0001-buildtools-wafsamba-add-disable-stack-protector-opti.patch Upstream
+package/libteam/0001-revert-disregard-current-state.patch Upstream
+package/libteam/0002-fix-build-on-openwrt-musl-libc.patch Upstream
+package/libteam/0003-increase-wait-time-for-daemon-kill.patch Upstream
+package/libtelnet/0001-fix-compilation-without-zlib.patch Upstream
+package/libtheora/0001-link-libtheoradec.patch Upstream
+package/libtheora/0002-fix-autoreconf.patch Upstream
+package/libtomcrypt/0001-fix-CVE-2019-17362.patch Upstream
+package/libtommath/0001-Build-test-bn_mp_set_double-c-on-more-platforms.patch Upstream
+package/libtorrent/0001-libtorrent.pc.in-add-Libs.Private.patch Upstream
+package/libubootenv/0001-src-CMakeLists.txt-do-not-force-the-build-of-a-share.patch Upstream
+package/libuhttpd/0001-add-compatibility-for-wolfssl-5-0.patch Upstream
+package/libuio/0001-configure.ac-set-automake-strictness-to-foreign.patch Upstream
+package/liburcu/0001-Only-blacklist-ARM-gcc-4.8.0-and-4.8.1.patch Upstream
+package/liburcu/0002-fix-don-t-use-C-thread_local-on-MacOs.patch Upstream
+package/liburcu/0003-Always-use-__thread-for-Thread-local-storage-except-on-MSVC.patch Upstream
+package/libusb-compat/0001-fix-a-build-issue-on-linux.patch Upstream
+package/libusbgx/0001-Add-include-of-sys-sysmacro.h.patch Upstream
+package/libuwsc/0001-CMakeLists.txt-add-BUILD_EXAMPLE.patch Upstream
+package/libuwsc/0002-fix-bad-indentation.patch Upstream
+package/libvpx/0001-vpx_mem-vpx_mem.h-Fix-compilation-with-uClibc.patch Upstream
+package/libwebsock/0001-Switch-to-use-pkg-config-to-detect-libevent-and-open.patch Upstream
+package/libwebsock/0002-fix-ssl.patch Upstream
+package/libwebsock/0003-fix-incorrect-inline.patch Upstream
+package/libwebsockets/0001-lib-tls-CMakeLists.txt-fix-build-without-threads.patch Upstream
+package/libyuv/0001-i386-sse2.patch Upstream
+package/lighttpd/0001-Modify-the-default-lighttpd-configuration-file-to-ha.patch Upstream
 package/lighttpd/S50lighttpd EmptyLastLine Indent Shellcheck Variables
 package/linux-tools/S10hyperv Indent Variables
 package/linuxptp/S65ptp4l Indent Shellcheck
