--- a/configs/swarco_linux_v3.1_scc-air-v2_sama5_docker_defconfig
+++ b/configs/swarco_linux_v3.1_scc-air-v2_sama5_docker_defconfig
@@ -64,6 +64,8 @@ BR2_PACKAGE_LIGHTTPD=y
 BR2_PACKAGE_LIGHTTPD_OPENSSL=y
 BR2_PACKAGE_LIGHTTPD_ZLIB=y
 BR2_PACKAGE_LRZSZ=y
+BR2_PACKAGE_MOSQUITTO=y
+BR2_PACKAGE_MOSQUITTO_BROKER=y
 BR2_PACKAGE_NETSNMP=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_SNTP=y
